Move themes to resources folder and move rabbitmqTest.java to test folder.